# Close-up_Systems

./: README.md  build.js  package-lock.json  package.json
.github/workflows/: build.yml
frontend-src/: index.html  style.css
frontend-src/js/: app.js
frontend-src/js/components/: ai-analysis.js  ai-tools-panel.js  budget-section.js  cast-section.js  dood-report.js  equipment-section.js  export-modal.js  import-modal.js  locations-section.js  navigation.js  primitives.js  project-modal.js  scene-board.js  script-viewer.js  scripts-section.js  settings.js  shot-list.js  sticky-note.js  takes.js
frontend-src/js/core/: charts.js  dnd.js  icons.js  parser.js  pdf.js  tokens.js
frontend-src/js/data/: ai-tools-registry.js  demo-data.js  live-sync.js  local-store.js  sync-client.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
