[package]
name = "close-up-systems"
version = "1.0.0"
description = "Close-up Systems -- Film-Produktionssoftware (Desktop, Tauri)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Das ist der entscheidende Teil, der Tauri für den Release-Build fehlt:
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "close-up-systems"
path = "src/main.rs"
